--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -10,7 +10,7 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Up to 3 Revisions</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>1 week of our attention</p></div>
+      <div class="panel-item"><p>1 week of our full attention</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Pay as you go</p></div>
       <a class="btn btn-default btn-panel" href="/payment/calculators/mastering/"><h3>Calculate price</h3></a>
@@ -26,7 +26,7 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Unlimited Revisions</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>1 week of our attention</p></div>
+      <div class="panel-item"><p>1 week of our full attention</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Cancel any time</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mastering/"><h3>Start</h3></a>
