--- a/_includes/panels-mix-feedback.html
+++ b/_includes/panels-mix-feedback.html
@@ -8,7 +8,7 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>1 mix feedback report</b><br></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>72 hour turnaround</p></div>
+      <div class="panel-item"><p>Turnaround: 3 business days</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Pay as you go</p></div>
       <a class="btn btn-default btn-panel" href="/payment/mix-feedback/"><h3>Purchase</h3></a>
@@ -22,7 +22,7 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>1 mix feedback report per month</b></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>48 hour turnaround</p></div>
+      <div class="panel-item"><p>Turnaround: 2 business days</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Cancel any time</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mix-feedback/"><h3>Start</h3></a>
