--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -17,14 +17,23 @@
 
  	<p><br>
 
- 		Bring a human touch and top of the line processing to your music through our mastering service. In addition to making your tracks loud, cohesive, and ready for release, our engineers take pride in <a href="/examples/">enhancing our clients' music without compromising their signature sound</a>. Each song we master gets a full week of our attention and listening through different devices, so you can be sure your mix will sound fantastic everywhere. 
- 		<br>
- 		<br>
- 		<b>Hear firsthand what we can do to your music with a free master, on us</b>.
+ 		<b>Hear firsthand what we can do with your first master, on us:</b>.
  		<br><br>
-		</p>
 
 		{% include email-submission-form-mast.html %}
+		<br>
+		<br>
+	</p>
+
+	<p><br>
+
+ 		Bring a human touch and top of the line processing to your music through our collaborative mastering service. In addition to making your tracks loud, cohesive, and ready for release, our engineers take pride in enhancing our clients' music without compromising their signature sound. Each song we master gets a full week of our attention and listening through different devices, so you can be sure your mix will sound fantastic everywhere. 
+ 		<br>
+ 		<br>
+ 		<a href="/examples/">Listen to examples of our mastering here</a>
+ 		
+		</p>
+
 		
 	</div>
  </div>
