--- a/_includes/rates-mix-feedback.html
+++ b/_includes/rates-mix-feedback.html
@@ -16,20 +16,28 @@
 
       <img src="/img/icons/mix-b.jpg" width="100%">
 
-  <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
+      <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    <b>Want some experienced ears on your music?</b>
-    <br>
-    <br>
-    With mix feedback, you get a detailed report from our mastering engineers with their professional assessment of your mix, along with solutions to any specific problems you are having with your mix. Our mix feedback report includes a breakdown of different aspects of your track, from EQ, to arrangement, and everything in between, to help you improve your mixes, recordings, and - even more importantly - your production prowess. Through mix feedback, you get to stay in complete control of your sound and bring your own mixing and recording skills to perfection.
-    <br>
-    <br>
-    <b>Get your first mix feedback report, on us, by entering your email below</b>.
-    <br>
-    <br>
+    With mix feedback, you get a detailed break-down from our mastering engineers with their professional assessment of your mix, along with solutions to any particular mixing difficulties you specify. Mix feedback allows you to stay in complete control of your sound and bring your own mixing and production skills to perfection.
+
+    
   </p>
 
+  <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
+
+    <b>Want some experienced ears on your music? Try mix feedback, on us:</b>
+    <br>
+    <br>
+
     {% include email-submission-form-mix.html %}
+    
+    <br>
+    <br>
+    <br>
+    <a href="/examples/mix-feedback/Get-Mastered-Mix-Feedback-Example.pdf">Download an example Mix Feedback Report PDF here</a>
+
+
+  </p>
 
     </div>
   </div>
