--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -51,7 +51,7 @@
         <!-- <li><a href="#about">About</a></li> -->
         <li><a href="/services/mix-feedback/">Mix Feedback</a></li>
             <li><a href="/services/mastering/">Mastering</a></li>
-            <li><a href="/services/audio-cleanup/">Audio Cleanup</a></li>
+            <!-- <li><a href="/services/audio-cleanup/">Audio Cleanup</a></li> -->
         <li><a href="#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/blog/">Blog</a></li>
