--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -104,7 +104,7 @@ function audioPlayPause(){
   <br>
 
 
-  <div class="col-md-4">
+  <div class="col-md-6">
     <a href="/services/mix-feedback/">
     <div class="service-panel">
       <h5>For Engineers</h5>
@@ -112,13 +112,13 @@ function audioPlayPause(){
     <p>With mix feedback, you get a detailed breakdown of how you can improve your mix, along with solutions to any specific problems you are running into. Find out more by clicking here.</p>
     <img src="/img/icons/mix.png" height="75">
     <br><br>
-    <h4>Try now free</h4>
+    <h4>Try free</h4>
     </div>
     </a>
   </div>
 
   
-  <div class="col-md-4">
+  <div class="col-md-6">
     <a href="/services/mastering/">
     <div class="service-panel">
       <h5>For Musicians</h5>
@@ -126,13 +126,13 @@ function audioPlayPause(){
     <p>Make your music cohesive, clear, and balanced on any system through our collaborative mastering process. Bring your music to the level of the artists you admire by clicking here.</p>
     <img src="/img/icons/cd.png" height="75">
     <br><br>
-    <h4>Try now free</h4>
+    <h4>Try free</h4>
     </div>
     </a>
   </div>
 
 
-  <div class="col-md-4">
+<!--   <div class="col-md-4">
     <a href="/services/audio-cleanup/">
     <div class="service-panel">
       <h5>For Podcasters</h5>
@@ -143,7 +143,7 @@ function audioPlayPause(){
     <h4>Try now free</h4>
     </div>
     </a>
-  </div>
+  </div> -->
 
 <!--   <div class="col-lg-12">
   <br>
