--- a/_includes/upload-widget-cloudwok.html
+++ b/_includes/upload-widget-cloudwok.html
@@ -18,9 +18,9 @@
         border: solid 1px #86dbbf !important;
     }
     .cloudwok-embed .btn-start-upload {
-        background: #86dbbf !important;
+        background: #ffb94e !important;
         color: #ffffff !important;
-        border: solid 1px #86dbbf !important;
+        border: solid 1px #ffffff !important;
     }
 </style>
 <script>
@@ -40,7 +40,7 @@
                 "dontslideup": true,
                 "dontfadeout": true
             },
-            "redirect": "http://getmastered.com/thank-you/"
+            "redirect": "http://getmastered.com/thank-you-2/"
         },
         "form": {
             "email": {
@@ -59,7 +59,7 @@
             },
             "message": {
                 "placeholder": "List any specific requests or questions you have for us here",
-                "rows": 7,
+                "rows": 5,
                 "optional": true
             },
             "button": "Upload and send",
