free update (now just a mastering sample)

--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -17,7 +17,7 @@
 
  	<p><br>
 
- 		<b>Hear firsthand what we can do with your first master, on us:</b>.
+ 		<b>Hear firsthand what we can do with a free mastering sample, on us. Let us know where we can reach you for your first master:</b>
  		<br><br>
 
 		{% include email-submission-form-mast.html %}
