--- a/_includes/rates-mix-feedback.html
+++ b/_includes/rates-mix-feedback.html
@@ -25,7 +25,7 @@
 
   <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    <b>Want some experienced ears on your music? Try mix feedback, on us:</b>
+    <b>Want experienced ears on your music? Let us know where we can reach you:</b>
     <br>
     <br>
 
