30-day free trials for everyone!

--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -28,6 +28,8 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>1 week of our full attention</p></div>
       <div class="panel-divider"></div>
+      <div class="panel-item"><p>30-Day Free Trial</p></div>
+      <div class="panel-divider"></div>
       <div class="panel-item"><p>Cancel any time</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mastering/"><h3>Start</h3></a>
 
