--- a/_includes/panels-mix-feedback.html
+++ b/_includes/panels-mix-feedback.html
@@ -24,6 +24,8 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Turnaround: 2 business days</p></div>
       <div class="panel-divider"></div>
+      <div class="panel-item"><p>30-Day Free Trial</p></div>
+      <div class="panel-divider"></div>
       <div class="panel-item"><p>Cancel any time</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mix-feedback/"><h3>Start</h3></a>
 
