--- a/_includes/rates-mix-feedback.html
+++ b/_includes/rates-mix-feedback.html
@@ -25,15 +25,15 @@
 
   <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    <b>Want experienced ears on your music? Let us know where we can reach you:</b>
+    <b>Want experienced ears on your music? Sign up for a free 30-day trial today, with no commitment.</b>
     <br>
     <br>
-
+<!-- 
     {% include email-submission-form-mix.html %}
     
     <br>
     <br>
-    <br>
+    <br> -->
     <a href="/examples/mix-feedback/Get-Mastered-Mix-Feedback-Example.pdf">Download an example Mix Feedback Report PDF here</a>
 
 
