--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -15,24 +15,26 @@
  	
  	 <img src="/img/icons/cd-b.jpg" width="100%">
 
- 	<p><br>
-
- 		<b>Hear firsthand what we can do with a free mastering sample, on us. Let us know where we can reach you for your first master:</b>
- 		<br><br>
-
-		{% include email-submission-form-mast.html %}
-		<br>
-		<br>
-	</p>
-
 	<p><br>
 
  		Bring a human touch and top of the line processing to your music through our collaborative mastering service. In addition to making your tracks loud, cohesive, and ready for release, our engineers take pride in enhancing our clients' music without compromising their signature sound. Each song we master gets a full week of our attention and listening through different devices, so you can be sure your mix will sound fantastic everywhere. 
- 		<br>
- 		<br>
- 		<a href="/examples/">Listen to examples of our mastering here</a>
  		
 		</p>
+
+
+		 <p><br>
+
+ 		<b>Hear firsthand what we can do with a free trial of our Music Mastering Plan, with no commitment</b>
+<!-- 
+		{% include email-submission-form-mast.html %}
+		<br>
+		<br> -->
+
+		<br>
+ 		<br>
+ 		<a href="/examples/">Listen to examples of our mastering here</a>
+
+	</p>
 
 		
 	</div>
