--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -104,7 +104,7 @@ function audioPlayPause(){
   <br>
 
 
-  <div class="col-md-6">
+<!--   <div class="col-md-6">
     <a href="/services/mix-feedback/">
     <div class="service-panel">
       <h5>For Engineers</h5>
@@ -115,10 +115,10 @@ function audioPlayPause(){
     <h4>Try free</h4>
     </div>
     </a>
-  </div>
+  </div> -->
 
   
-  <div class="col-md-6">
+  <div class="col-md-12">
     <a href="/services/mastering/">
     <div class="service-panel">
       <h5>For Musicians</h5>
@@ -153,7 +153,7 @@ function audioPlayPause(){
   
 
   <div class="col-lg-12">
-  <p><br><br><b>Choose one of our above services, or learn more about our <a href="/blog/about/Who-We-Are/">engineers</a>, our <a href="/blog/about/What-Is-Get-Mastered/">philosophy</a>, and <a href="#reviews">what people think of us</a>.</b></p>
+  <p><br><br><b>Choose one of our above services, or learn more about our <a href="/blog/about/Who-We-Are/">engineers</a>, our <a href="/blog/about/What-Is-Get-Mastered/">philosophy</a>, and <a href="/services/mastering/#reviews">what people think of us</a>.</b></p>
   <br>
   </div>
   
