--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -22,15 +22,14 @@
 		</p>
 
 
-		 <p><br>
+		 <p>
 
- 		<b>Hear firsthand what we can do with a free trial of our Music Mastering Plan, with no commitment</b>
-<!-- 
-		{% include email-submission-form-mast.html %}
-		<br>
-		<br> -->
+		<!--  	<br>
 
-		<br>
+ 		<b>Hear firsthand what we can do with a <a href="/subscriptions/mastering/">free trial of our Music Mastering Plan</a>, with no commitment</b> -->
+
+
+		
  		<br>
  		<a href="/examples/">Listen to examples of our mastering here</a>
 
