--- a/_includes/rates-mix-feedback.html
+++ b/_includes/rates-mix-feedback.html
@@ -25,7 +25,7 @@
 
   <p style="font-size: 16px; color: #333; text-shadow: 0px 0px 10px #ccc;"><br>
 
-    <b>Want experienced ears on your music? Sign up for a free 30-day trial today, with no commitment.</b>
+    <b>Want experienced ears on your music? <a href="/subscriptions/mix-feedback/">Sign up for a free 30-day trial today, with no commitment.</a></b>
     <br>
     <br>
 <!-- 
