--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -49,10 +49,10 @@
             <div class="collapse navbar-collapse navbar-left navbar-main-collapse col-sm-8">
       <ul class="nav navbar-nav" style="text-align: left;">
         <!-- <li><a href="#about">About</a></li> -->
-        <li><a href="/services/mix-feedback/">Mix Feedback</a></li>
+        <!-- <li><a href="/services/mix-feedback/">Mix Feedback</a></li> -->
             <li><a href="/services/mastering/">Mastering</a></li>
             <!-- <li><a href="/services/audio-cleanup/">Audio Cleanup</a></li> -->
-        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="/services/mastering/#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
         <li><a href="/blog/">Blog</a></li>
         <li><a href="/login/">Login</a></li>
