less blog focus, no free

--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -54,7 +54,7 @@
             <!-- <li><a href="/services/audio-cleanup/">Audio Cleanup</a></li> -->
         <li><a href="/services/mastering/#reviews">Reviews</a></li>
         <li><a href="/examples/">Examples</a></li>
-        <li><a href="/blog/">Blog</a></li>
+        <!-- <li><a href="/blog/">Blog</a></li> -->
         <li><a href="/login/">Login</a></li>
         <!-- <li><a href="/subscriptions/">Subscribe</a></li> -->
         <!-- <li class="hidden-lg hidden-xl"><a href="/contact/">Contact</a></li> -->
