--- a/_includes/header-post.html
+++ b/_includes/header-post.html
@@ -40,7 +40,7 @@
             <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
       <ul class="nav navbar-nav" style="padding-right: 1045px;">
         <li class="active"><a href="/#intro">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
+        <!-- <li><a href="/blog">Blog</a></li> -->
         <li><a href="/#contact">Contact</a></li>
         <li><a href="http://whoisyohannes.com">My Music</a></li>
       </ul>
