--- a/_includes/offer.html
+++ b/_includes/offer.html
@@ -121,12 +121,9 @@ function audioPlayPause(){
   <div class="col-md-12">
     <a href="/services/mastering/">
     <div class="service-panel">
-      <h5>For Musicians</h5>
     <h3>Music Mastering</h3>
+    <!-- <img src="/img/icons/cd.png" height="75"> -->
     <p>Make your music cohesive, clear, and balanced on any system through our collaborative mastering process. Bring your music to the level of the artists you admire by clicking here.</p>
-    <img src="/img/icons/cd.png" height="75">
-    <br><br>
-    <h4>Try free</h4>
     </div>
     </a>
   </div>
@@ -153,7 +150,7 @@ function audioPlayPause(){
   
 
   <div class="col-lg-12">
-  <p><br><br><b>Choose one of our above services, or learn more about our <a href="/blog/about/Who-We-Are/">engineers</a>, our <a href="/blog/about/What-Is-Get-Mastered/">philosophy</a>, and <a href="/services/mastering/#reviews">what people think of us</a>.</b></p>
+  <p><br><br><b>Learn more about our <a href="/blog/about/Who-We-Are/">engineers</a>, our <a href="/blog/about/What-Is-Get-Mastered/">philosophy</a>, and <a href="/services/mastering/#reviews">what people think of us</a>.</b></p>
   <br>
   </div>
   
