--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -10,7 +10,7 @@
     <!-- <a href="/services/audio-cleanup/">Audio Cleanup</a> -->
     <a href="services/mastering/#reviews">Reviews</a>
     <a href="/examples/">Examples</a>
-    <a href="/blog/">Blog</a>
+    <!-- <a href="/blog/">Blog</a> -->
     <a href="/login/">Login</a>
     </p>
   </div>
@@ -32,7 +32,7 @@
 
           <a href="#about">
           <p class="clicky-plain">We are a team of audio experts<br>helping creators get the sound they want.</p>
-          <p class="clicky-color">Start now for free</p>
+          <p class="clicky-color">Start now</p>
           <!-- <p class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px; font-weight: 400;">Scroll to learn more about Get Mastered</p> -->
           <img class="hidden-xs hidden-sm hidden-md" src="/img/down-arrow.png" align="left" alt="arrow" width="8%" style="margin-top: 1%;">
           <img class="hidden-xl hidden-lg" src="/img/down-arrow.png" align="left" alt="arrow" width="30%" style="margin-top: 1%;">
