--- a/_includes/sidebar-home.html
+++ b/_includes/sidebar-home.html
@@ -36,9 +36,9 @@
 <h5 class="sidebar-head">Search the blog<br><br></h5> -->
 
 
-<h5 class="sidebar-head">
+<!-- <h5 class="sidebar-head">
     <a href="/#about">Try us out for free</a><br><br>
-</h5>
+</h5> -->
 
 
 
