Pro Bono Program and mastering reword

--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -1,5 +1,5 @@
 
-   <div class="col-md-5 col-xs-12" style="padding: 0%; position: relative;">
+   <div class="col-md-12 col-xs-12" style="padding: 0% 17%; position: relative;">
 
   <div class="col-xs-6 panel-holder">
     <div class="panel-header-grey"><h3>Music Mastering<br>Standard</h3></div>
@@ -8,7 +8,9 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>1 music master</b></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Unlimited Revisions</p></div>
+      <div class="panel-item"><p>Mix feedback included</p></div>
+      <div class="panel-divider"></div>
+      <div class="panel-item"><p>Revisions until you are satisfied</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>1 week of our full attention</p></div>
       <a class="btn btn-default btn-panel" href="/payment/calculators/mastering/"><h3>Calculate price</h3></a>
@@ -22,7 +24,9 @@
       <div class="panel-divider"></div>
       <div class="panel-item"><p><b>1 music master per month</b></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>Unlimited Revisions</p></div>
+      <div class="panel-item"><p>Mix feedback included</p></div>
+      <div class="panel-divider"></div>
+      <div class="panel-item"><p>Revisions until you are satisfied</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>1 week of our full attention</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mastering/"><h3>Start</h3></a>
