--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -7,42 +7,56 @@
      <div class="col-md-1">
  </div>
 
- <div class="col-md-5">
+ <div class="col-md-12">
  	<div class="service-text">
 
- 		<h1>Music Mastering</h1>
- 		<br>
- 	
- 	 <img src="/img/icons/cd-b.jpg" width="100%">
-
-	<p><br>
-
- 		Bring a human touch and top of the line processing to your music through our collaborative mastering service. In addition to making your tracks loud, cohesive, and ready for release, our engineers take pride in enhancing our clients' music without compromising their signature sound. Each song we master gets a full week of our attention and listening through different devices, so you can be sure your mix will sound fantastic everywhere. 
  		
-		</p>
+ 		<h1>Our Mastering</h1>
 
-
-		 <p>
-
-		<!--  	<br>
-
- 		<b>Hear firsthand what we can do with a <a href="/subscriptions/mastering/">free trial of our Music Mastering Plan</a>, with no commitment</b> -->
-
-
-		
  		<br>
- 		<a href="/examples/">Listen to examples of our mastering here</a>
+ 		<br>
 
-	</p>
 
-		
+ 		<p style="font-size: 24px;"><b>
+ 			Start working with your own personal mastering engineer today.</b>
+ 		<br>
+ 		</p>
+ 		<br>
+ 		 	 <img src="/img/icons/cd-b.jpg" width="50%">
+ 		 	 <br>
+ 		 	 <br>
+
+	<p>
+
+ 		Add a professional edge to your music through our unique, collaborative mastering service. In addition to bringing your tracks to a cohesive and ready-for-release level, our engineers go the extra mile to give you detailed feedback on your mix so you can grow your own production skills.
+ 		<br>
+ 		<br>
+ 	</p>
+
+
+ 	
+
+
+
 	</div>
  </div>
 
 
  {% include panels-mastering.html %}
 
+ <div class="col-md-12">
+ 	<div class="service-text">
 
+<p>
+
+		
+ 		Our prices reflect the level of quality you can expect from our services - but we know high-quality mastering can be outside of some people's budgets. That is why we are proud to be the only mastering service that offers the chance for a master completely free of charge through our <a target="_blank" href="https://goo.gl/forms/3611iAFy1O5Mpgu72">Pro Bono Mastering Program</a>.
+ 		<br><br>
+
+ 		 <a href="/examples/">Listen to examples of our mastering here</a>
+		</p>
+	</div>
+</div>
 
    <div class="col-md-1">
  </div>
