--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -6,9 +6,9 @@
     <p>
       <a class="navbar-brand landing-brand" href="/"><b>GET MASTERED</b></a>
     <!-- <a href="/services/mix-feedback/">Mix Feedback</a> -->
-    <a href="/services/mastering/">Mastering</a> 
+    <a href="/#mastering">Mastering</a> 
     <!-- <a href="/services/audio-cleanup/">Audio Cleanup</a> -->
-    <a href="services/mastering/#reviews">Reviews</a>
+    <a href="/#reviews">Reviews</a>
     <a href="/examples/">Examples</a>
     <!-- <a href="/blog/">Blog</a> -->
     <a href="/login/">Login</a>
