--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -1,6 +1,6 @@
 
 
-<div id="mastering" class="page-scroll col-lg-12 rates mastering-rates">
+<div id="mastering" class="page-scroll col-lg-12  landing-lower">
 
 <div class="row service-container">
 
@@ -8,7 +8,7 @@
  </div>
 
  <div class="col-md-12">
- 	<div class="service-text">
+ 	<div class="service-text" id="mastering">
 
  		
  		<h1>Our Mastering</h1>
@@ -22,8 +22,8 @@
  		<br>
  		</p>
  		<br>
- 		 	 <img src="/img/icons/cd-b.jpg" width="50%">
- 		 	 <br>
+ 		 	 <!-- <img src="/img/icons/cd-b.jpg" width="50%"> -->
+ 		 	 
  		 	 <br>
 
 	<p>
@@ -43,14 +43,16 @@
 
 
  {% include panels-mastering.html %}
+ <br>
+ <br>
 
  <div class="col-md-12">
  	<div class="service-text">
 
 <p>
 
-		
- 		Our prices reflect the level of quality you can expect from our services - but we know high-quality mastering can be outside of some people's budgets. That is why we are proud to be the only mastering service that offers the chance for a master completely free of charge through our <a target="_blank" href="https://goo.gl/forms/3611iAFy1O5Mpgu72">Pro Bono Mastering Program</a>.
+		<br>
+ 		Our prices reflect the level of quality you can expect from our services - but we know high-quality mastering can be outside of some people's budgets. That is why we are proud to be the only mastering service that offers the chance for mastering services completely free of charge through our <a target="_blank" href="https://goo.gl/forms/3611iAFy1O5Mpgu72">Pro Bono Mastering Program</a>.
  		<br><br>
 
  		 <a href="/examples/">Listen to examples of our mastering here</a>
