--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -30,7 +30,7 @@
 
 
 
-          <a href="#about">
+          <a href="/#mastering">
           <p class="clicky-plain">We are a team of audio experts<br>helping creators get the sound they want.</p>
           <p class="clicky-color">Start now</p>
           <!-- <p class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px; font-weight: 400;">Scroll to learn more about Get Mastered</p> -->
