fixed widths mobile

--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -1,11 +1,11 @@
 
 
-<div id="mastering" class="page-scroll col-lg-12  landing-lower">
+<div id="mastering" class="page-scroll col-lg-12 landing-lower">
 
-<div class="row service-container">
+<!-- <div class="row service-container"> -->
 
-     <div class="col-md-1">
- </div>
+<!--      <div class="col-md-1">
+ </div> -->
 
  <div class="col-md-12">
  	<div class="service-text" id="mastering">
@@ -66,5 +66,5 @@
 
 
 
-  </div>
+  <!-- </div> -->
   </div>
