--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -1,7 +1,7 @@
 
-   <div class="col-md-12 col-xs-12" style="padding: 0% 10%; position: relative;">
+   <div class="col-md-12 col-xs-12" style="padding: 0% 0%; position: relative;">
 
-  <div class="col-xs-6 panel-holder">
+  <div class="col-xs-12 col-md-6 panel-holder">
     <div class="panel-header-grey"><h3>Music Mastering<br>Standard</h3></div>
     <div class="panel-price"><h3>$59</h3>
       <p><i>per song</i></p></div>
@@ -17,7 +17,7 @@
 
   </div>
 
-  <div class="col-xs-6 panel-holder">
+  <div class="col-xs-12 col-md-6 panel-holder">
     <div class="panel-header-green"><h3>Music Mastering<br>Plan</h3></div>
     <div class="panel-price"><h3>$45</h3>
       <p><i>per month</i></p></div>
