--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -1,4 +1,4 @@
-
+<div class="row">
 <div class="wow fadeInUp" data-wow-delay="1.4s">
 
   <div class="col-lg-12 hidden-xs hidden-sm landing-top" align="left">
@@ -41,6 +41,7 @@
 
       </div>
       </div>
+</div>
 </div>
 
 
