--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -6,13 +6,11 @@
     <div class="panel-price"><h3>$59</h3>
       <p><i>per song</i></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p><b>1 music master</b></p></div>
-      <div class="panel-divider"></div>
-      <div class="panel-item"><p>Mix feedback included</p></div>
+      <div class="panel-item"><p>Expert feedback included</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Revisions until you are satisfied</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>1 week of our full attention</p></div>
+      <div class="panel-item"><p>Turnarounds on your schedule</p></div>
       <a class="btn btn-default btn-panel" href="/payment/calculators/mastering/"><h3>Calculate price</h3></a>
 
   </div>
@@ -22,13 +20,11 @@
     <div class="panel-price"><h3>$45</h3>
       <p><i>per month</i></p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p><b>1 music master per month</b></p></div>
-      <div class="panel-divider"></div>
-      <div class="panel-item"><p>Mix feedback included</p></div>
+      <div class="panel-item"><p>Expert feedback included</p></div>
       <div class="panel-divider"></div>
       <div class="panel-item"><p>Revisions until you are satisfied</p></div>
       <div class="panel-divider"></div>
-      <div class="panel-item"><p>1 week of our full attention</p></div>
+      <div class="panel-item"><p>Turnarounds on your schedule</p></div>
       <a class="btn btn-default btn-panel" href="/subscriptions/mastering/"><h3>Start</h3></a>
 
   </div>
