Landing page update

--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -6,9 +6,9 @@
     <p>
       <a class="navbar-brand landing-brand" href="/"><b>GET MASTERED</b></a>
     <!-- <a href="/services/mix-feedback/">Mix Feedback</a> -->
-    <a href="/#mastering">Mastering</a> 
+    <a href="#mastering">Mastering</a> 
     <!-- <a href="/services/audio-cleanup/">Audio Cleanup</a> -->
-    <a href="/#reviews">Reviews</a>
+    <a href="#reviews">Reviews</a>
     <a href="/examples/">Examples</a>
     <!-- <a href="/blog/">Blog</a> -->
     <a href="/login/">Login</a>
@@ -30,9 +30,9 @@
 
 
 
-          <a href="/#mastering">
+          <a href="#mastering">
           <p class="clicky-plain">We are a team of audio experts<br>helping creators get the sound they want.</p>
-          <p class="clicky-color">Start now</p>
+          <p class="clicky-color">Learn more</p>
           <!-- <p class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px; font-weight: 400;">Scroll to learn more about Get Mastered</p> -->
           <img class="hidden-xs hidden-sm hidden-md" src="/img/down-arrow.png" align="left" alt="arrow" width="8%" style="margin-top: 1%;">
           <img class="hidden-xl hidden-lg" src="/img/down-arrow.png" align="left" alt="arrow" width="30%" style="margin-top: 1%;">
