--- a/_includes/social-media.html
+++ b/_includes/social-media.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 
 <p>-<a href="/blog/about/Who-We-Are/">Keenan Hye
-
-	<br>
-
-	<img src="https://i1045.photobucket.com/albums/b459/keenanhi/headshot-circ_zpshegku5ql.png" width="15%">
-
 	<br>
 
 <i>Founder, engineer, and voice behind most of these blog posts</i>
 
 </a> 
-<br>
-<br>
-<!-- <a href="#page-top">Back to top of post</a>
- -->
 </p>
 
 
 
 	<a href="https://twitter.com/share" class="twitter-share-button" data-size="small" data-count="none" data-hashtags="GetMastered" >Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
-
-	<div class="fb-share-button" data-href="http://getmastered.com{{ page.url }}" data-layout="button" style="padding: 0px 15px 0px 15px;">
+	<br>
+	<div class="fb-share-button" data-href="http://getmastered.com{{ page.url }}" data-layout="button" style="padding: 10px 0px;">
 	</div>
 
-	<br><br><br>
+	<br>
 
 
 	{% include mailing-list-signup.html %}
