--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -86,7 +86,7 @@
     </div>
   </div>
   <div class="col-lg-3 sidebar hidden-md hidden-sm hidden-xs" style="padding: 60px 0px; margin: 0px;">
-    {% include sidebar-right.html %}
+   <!-- include sidebar-right.html  -->
   </div>
 </div>
 
