changed lee's title

--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -38,7 +38,7 @@
 	 			<a class="headshot-text" target="_blank" href="/blog/about/Who-We-Are/">
 	 			<img class="headshot" src="/img/headshots/lee.png">
 	 			<br>
-	 			<b>Lee Schuna</b><br>Narrative Audio & Sound Design Professional
+	 			<b>Lee Schuna</b><br>Electronic Production & Sound Design Professional
 	 			</a>
 	 		</div>
 	 		</div>
