--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -9,7 +9,7 @@
     <a href="#mastering">Mastering</a> 
     <!-- <a href="/services/audio-cleanup/">Audio Cleanup</a> -->
     <a href="#reviews">Reviews</a>
-    <a href="/examples/">Examples</a>
+    <a href="/our-work/">Our Work</a>
     <!-- <a href="/blog/">Blog</a> -->
     <a href="/login/">Login</a>
     </p>
