new blog post - what is mastering

--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -9,8 +9,8 @@
 	 		<div class="row">
 	 			<h1>Our Mastering<br><br></h1>
 		<p class="hidden-xs" style="font-size: 150%;">
-			<b>What's even better than getting a polished, ready-for-release master?</b>
-			<br>Upping your own production skills with a mastering engineer's feedback on your mix.
+			<b>What's better making your music sound amazing?</b>
+			<br>Upping your own production skills with feedback from a mastering engineer.
 			<br>Meet our audio experts:
 
 	<!-- 		At Get Mastered, both come included with our refreshingly human mastering service. 
@@ -46,7 +46,7 @@
 
 	 		<div class="row">
 	 			<p>
-					With Get Mastered, you don't just get a master - you get objective expert feedback on your music.
+					With Get Mastered, <a style="font-size:" href="/blog/about/What-Is-Mastering/" target="_blank">you don't just get a master</a> - you get objective expert feedback on your music.
 					<br>
 			 		<br>
 		 		</p>
