fixed button bug

--- a/_includes/panels-mastering.html
+++ b/_includes/panels-mastering.html
@@ -1,5 +1,5 @@
 
-   <div class="col-md-12 col-xs-12" style="padding: 0% 0%; position: relative;">
+<div class="col-xs-12" style="padding: 0% 0%; position: relative;">
 
   <div class="col-xs-12 col-md-6 panel-holder">
     <div class="panel-header-grey"><h3>Music Mastering<br>Standard</h3></div>
