--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -1,6 +1,6 @@
 
 
-<div id="mastering" class="page-scroll col-lg-12 landing-lower">
+<div id="mastering" class="page-scroll col-xs-12 landing-lower">
 
 	 <div class="col-md-12">
 	 	<div class="service-text row" id="mastering">
@@ -8,13 +8,11 @@
 
 	 		<div class="row">
 	 			<h1>Our Mastering<br><br></h1>
-		<p class="hidden-xs" style="font-size: 150%;">
-			<b>What's better making your music sound amazing?</b>
-			<br>Upping your own production skills with feedback from a mastering engineer.
-			<br>Meet our audio experts:
-
-	<!-- 		At Get Mastered, both come included with our refreshingly human mastering service. 
-	 -->		<br><br>
+			<p class="hidden-xs" style="font-size: 150%;">
+				<b>What's better making your music sound amazing?</b>
+				<br>Upping your own production skills with feedback from a mastering engineer.
+				<br>Meet our audio experts:
+				<br><br>
 			</p>
 	 		</div>
 
@@ -62,6 +60,8 @@
 		</div>
 	</div>
 
+	
+
 
 	<div class="col-md-12">
 	 	<div class="pricing row" id="pricing">
@@ -82,7 +82,7 @@
 		 	<br>
 		 	<br>
 
-			 <div class="col-md-12">
+			 <div class="col-xs-12">
 			 	<div class="service-text">
 
 				<p>
