--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -9,7 +9,7 @@
 	 		<div class="row">
 	 			<h1>Our Mastering<br><br></h1>
 			<p class="hidden-xs" style="font-size: 150%;">
-				<b>What's better making your music sound amazing?</b>
+				<b>What's better than making your music sound amazing?</b>
 				<br>Upping your own production skills with feedback from a mastering engineer.
 				<br>Meet our audio experts:
 				<br><br>
