--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -86,9 +86,11 @@
 			 	<div class="service-text">
 
 				<p>
-					Want to learn more?
-					<br><br>
 					<a href="#reviews">Read what our clients have to say about us</a>.
+					<br><br>
+					More questions?
+					<br>
+					<a href="#faq">Read our FAQ</a>.
 					</p>
 				</div>
 			</div>
