button bug fix, faq additions

--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -31,6 +31,15 @@
       <p>Yes! We know that even the most talented artists sometimes can't afford professional mastering, and we think that's a shame. We don't want you to have to resort to lousy, unprofessional mastering services, so <a href="https://goo.gl/forms/3611iAFy1O5Mpgu72">we do offer Pro Bono Mastering Services</a> for artists that we consider incredibly unique and talented.</p>
     </div>
 
+    <div class="faq-div">
+      <h3>Do you guys offer mixing services? What about stem mastering?</h3>
+      <p>
+        Mixing and stem mastering are much more time intensive than mastering, and because of this, we don't offer them through our website. However, our engineers do help clients with mixing needs on occassion. Our engineers each have their own individual mixing rates when they are available to take on mixing work. The same goes for stem mastering, but it really depends on our workload. If you are already connected with one of our engineers, reach out to them for more information on rates and availability.
+        <br><br>
+        If you are not connected with us, send us an email at <a href="mailto:services@getmastered.com">services@getmastered.com</a> and ask about our availability and rates.
+      </p>
+    </div>
+
 
   </div>
   
