lots of tiny text changes

--- a/_includes/faq.html
+++ b/_includes/faq.html
@@ -34,9 +34,9 @@
     <div class="faq-div">
       <h3>Do you guys offer mixing services? What about stem mastering?</h3>
       <p>
-        Mixing and stem mastering are much more time intensive than mastering, and because of this, we don't offer them through our website. However, our engineers do help clients with mixing needs on occassion. Our engineers each have their own individual mixing rates when they are available to take on mixing work. The same goes for stem mastering, but it really depends on our workload. If you are already connected with one of our engineers, reach out to them for more information on rates and availability.
+        Mixing and stem mastering are much more time intensive than mastering, and because of this, we don't offer them through our website. However, our engineers do help clients with mixing needs on occassion. Our engineers each have their own individual mixing rates when they are available to take on mixing work. The same goes for stem mastering, but both really depend on our workload.
         <br><br>
-        If you are not connected with us, send us an email at <a href="mailto:services@getmastered.com">services@getmastered.com</a> and ask about our availability and rates.
+        If you are already connected with one of our engineers, reach out to them for more information on rates and availability. If you are not connected with us, send us an email at <a href="mailto:services@getmastered.com">services@getmastered.com</a> and ask about our availability and rates.
       </p>
     </div>
 
