--- a/_includes/rates-mastering.html
+++ b/_includes/rates-mastering.html
@@ -10,7 +10,7 @@
 	 			<h1>Our Mastering<br><br></h1>
 			<p class="hidden-xs" style="font-size: 150%;">
 				<b>What's better than making your music sound amazing?</b>
-				<br>Upping your own production skills with feedback from mastering engineers.
+				<br>Getting feedback from professional mastering engineers.
 				<br>Meet our audio experts:
 				<br><br>
 			</p>
