--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,7 @@
 
     <div class="row-fluid bg-white">
       <br>
-      <div class="hidden-lg hidden-xl">
-      {{ content }}
-      </div>
-      <div class="hidden-md hidden-sm hidden-xs" style="padding-right: 8%;">
+      <div>
       {{ content }}
       </div>
     </div>
