--- a/_includes/landing-page.html
+++ b/_includes/landing-page.html
@@ -35,7 +35,9 @@
           <p class="clicky-color">Learn more</p>
           <!-- <p class="hidden-xl hidden-lg" style="font-size: 150%; color: #FFF; text-align: cetner; text-shadow: 0px 0px 20px #000; padding-top: 0px; font-weight: 400;">Scroll to learn more about Get Mastered</p> -->
           <img class="hidden-xs hidden-sm hidden-md" src="/img/down-arrow.png" align="left" alt="arrow" width="8%" style="margin-top: 1%;">
-          <img class="hidden-xl hidden-lg" src="/img/down-arrow.png" align="left" alt="arrow" width="30%" style="margin-top: 1%;">
+          <img class="hidden-xl hidden-lg hidden-sm hidden-xs" src="/img/down-arrow.png" align="left" alt="arrow" width="15%" style="margin-top: 1%;">
+          </a>
+          <img class="hidden-xl hidden-lg hidden-md" src="/img/down-arrow.png" align="left" alt="arrow" width="22%" style="margin-top: 1%;">
           </a>
 
 
