--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,14 +5,6 @@
 
 <h5><a class="master-color-light" href="/blog/">BLOG HOME</a></h5>
 
-
-
-
-        <!--     <h4 style="color: #777; display: inline; text-transform: uppercase;">
-    <a href="/blog/">Blog home</a></h4>
-<br>
-<br> -->
-
 <h5 class="sidebar-head">
     <a href="/blog/about/What-Is-Get-Mastered/" class="sidebar-text">What is Get Mastered?</a><br>
 </h5>
@@ -20,6 +12,10 @@
 <br><h5 class="sidebar-head">
 <a href="/blog/about/Who-We-Are/" class="sidebar-text">Who Are we?</a><br><br>
     </h5>
+
+    <h5 class="sidebar-head">
+    <a href="/blog/about/What-Is-Mastering/" class="sidebar-text">What is mastering?</a><br><br>
+        </h5>
 
 
 
