--- a/_includes/header-services.html
+++ b/_includes/header-services.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="utf-8">
     <title>{{ site.name }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ site.description }}">
     <meta name="author" content="Keenan Hye">
+    <meta property="og:image" content="{{ site.fbphoto }}" />
 
-    <!-- <link rel="shortcut icon" href="http://i1045.photobucket.com/albums/b459/keenanhi/Flavicon_zps31q8d1uz.png" /> -->
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
